--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-remark-images": "^1.5.67",
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-remark": "^1.7.44",
+    "react-headroom": "^2.2.2",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.3.3"
   },
