--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-plugin-typography": "^1.7.19",
     "gatsby-remark-images": "^1.5.67",
+    "gatsby-remark-prismjs": "^2.0.5",
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-remark": "^1.7.44",
+    "prismjs": "^1.15.0",
     "react-headroom": "^2.2.2",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.3.3"
