--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "gatsby-plugin-sharp": "^1.6.48",
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-plugin-typography": "^1.7.19",
+    "gatsby-remark-copy-linked-files": "^1.5.37",
     "gatsby-remark-images": "^1.5.67",
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-remark": "^1.7.44",
+    "gatsby-transformer-sharp": "^1.6.27",
     "react-headroom": "^2.2.2",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.3.3"
