--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
+    "favicons-webpack-plugin": "https://github.com/Creatiwity/favicons-webpack-plugin/tarball/master",
     "gatsby": "^1.9.247",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-catch-links": "^1.0.24",
