--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "1.0.0",
   "author": "",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "favicons-webpack-plugin": "https://github.com/Creatiwity/favicons-webpack-plugin/tarball/master",
-    "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40",
+    "gatsby": "^1.9.277",
+    "gatsby-link": "^1.6.46",
     "gatsby-plugin-catch-links": "^1.0.24",
     "gatsby-plugin-google-analytics": "^1.0.31",
     "gatsby-plugin-react-helmet": "^2.0.11",
@@ -28,7 +28,7 @@
     "react-ellipsis-text": "^1.0.0",
     "react-headroom": "^2.2.2",
     "react-helmet": "^5.2.0",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.4.5"
   },
   "keywords": [
     "gatsby"
@@ -41,7 +41,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.12.0"
+    "prettier": "^1.14.2"
   },
   "repository": {
     "type": "git",
